<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#423E3E"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/create_acc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="631dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="256dp"
        android:layout_height="107dp"
        android:contentDescription="@string/app_logo"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/create_acc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/description_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="131dp"
        android:text="@string/greenflag_customers_can"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/description_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/description_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:text="@string/create_an_account_to_access"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/create_acc_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_1" />

    <ImageView
        android:id="@+id/tick_1"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tick_1"
        app:layout_constraintEnd_toStartOf="@+id/benefits_1"
        app:layout_constraintTop_toBottomOf="@+id/description_2"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/benefits_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:text="@string/car_health_updates"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/benefits_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/benefits_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="10dp"
        android:text="@string/request_a_rescue_online"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/benefits_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/tick_2"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tick_2"
        app:layout_constraintEnd_toStartOf="@+id/benefits_2"
        app:layout_constraintTop_toBottomOf="@+id/tick_1"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/benefits_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/policy_information"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_2" />

    <ImageView
        android:id="@+id/tick_3"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tick_3"
        app:layout_constraintEnd_toStartOf="@+id/benefits_3"
        app:layout_constraintTop_toBottomOf="@+id/tick_2"
        app:srcCompat="@drawable/tick" />

</androidx.constraintlayout.widget.ConstraintLayout>